# ethGlobal_zkFocil

./: README.md
brevis_implem/zk_focil_lrs/: README.md
brevis_implem/zk_focil_lrs/app/: Cargo.toml
brevis_implem/zk_focil_lrs/app/src/: main.rs
brevis_implem/zk_focil_lrs/lib/: Cargo.toml
brevis_implem/zk_focil_lrs/lib/src/: lib.rs  lottery.rs  lsag_verifier.rs
brevis_implem/zk_focil_lrs/lib/src/utils/: generate_privatekey.rs  hash_to_secp256k1.rs  key_image.rs  mod.rs
brevis_implem/zk_focil_lrs/prover/: Cargo.toml
brevis_implem/zk_focil_lrs/prover/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: BlockList.tsx  BlockchainControl.tsx  BlockchainStatus.tsx  TransactionList.tsx
frontend/src/hooks/: useBlockchain.ts
frontend/src/types/: index.ts
frontend/src/utils/: blockService.ts  debug.ts  keyGenerator.ts  transactionGenerator.ts
succint_implem/zk_focil/: .env.example  README.md
succint_implem/zk_focil/lib/: Cargo.toml
succint_implem/zk_focil/lib/src/: lib.rs
succint_implem/zk_focil/lib/src/utils/: generate_privatekey.rs  keccak256.rs  serialize_point.rs  serialize_ring.rs
succint_implem/zk_focil/program/: Cargo.toml
succint_implem/zk_focil/program/src/: main.rs
succint_implem/zk_focil/script/: Cargo.toml
